13 January 2015: Wouter
	- Update OSX resolvehook to flush dns caches for new OSX release
	  with "discoveryutil udnsflushcaches" and "discoveryutil
	  mdnsflushcache".
	- Patches from Pavel Simerda:
		dnssec-trigger-script: The accepted version of NetworkManager
			patch uses `resolv.conf` instead of
			`resolv.conf.default`,
			https://bugzilla.gnome.org/show_bug.cgi?id=732941
		dnssec-trigger-script: Leaking file descriptors is bad,
			especially when selinux or similar tool is used.
			https://bugzilla.redhat.com/show_bug.cgi?id=1147705
		dnssec-trigger-script: Use a regular file unless
			use_resolv_secure_conf_symlink is set. Always
			install /var/run/dnssec-trigger/resolv.conf for
			comparison.  Guard all of those regular files using
			immutable attribute.  
			https://bugzilla.redhat.com/show_bug.cgi?id=1165126
		dnssec-trigger-script: fix desktop file paths.
			

21 November 2014: Wouter
	- Patches from Pavel Simerda:
		dnssec-trigger-script: lock --update-* methods only
			The original locking was a bit too broad for future
			development.
		dnssec-trigger-script: improve /etc/dnssec.conf handling
			Minor changes that make future /etc/dnssec.conf
			extensions easier.
		dnssec-trigger-script: support 'debug' option in
		  /etc/dnssec.conf
			With that you can get the debugging output even
			for instances run by systemd, dnssec-triggerd
			and NetworkManager dispatcher.
		dnssec-trigger-script: clean up resolv.conf backup and
		  restore
			Clean up the code a bit so that later additions
			dont turn it into a mess.
		dnssec-trigger-script: use
		  /var/run/NetworkManager/resolv.conf.default
			Avoid restarting NetworkManager just to restore
			/etc/resolv.conf when a simple symlink would
			do. This is only done when the NetworkManager's
			private resolv.conf actually exists.
		allow the resolv.conf hooks be handled by
		  dnssec-trigger-script
		dnssec-trigger-script: handle resolv.conf events from the
		  daemon